--- a/images-search.html
+++ b/images-search.html
@@ -30,7 +30,7 @@
     	<div class="container">
 
     	<form action="http://images.google.com/images" method="GET" class="form-group w-50 form">
-    		<h1>Search Here <span class="pera">Google Images</span></h1>
+    		<h1>Google <span class="pera">Google Images</span></h1>
     		<input type="text" required name="q" placeholder="search" class="form-control">
     		<br>
     		<input type="submit" value="Google search Images" class="btn btn-primary">
