updated I'm Feeling Lucky

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         		<input type="text" name="q" placeholder="search" class="form-control" required >
         	    </div>
         		<br>
-        		<input type="submit" value="Google search" class="btn btn-primary">
+            <input type="submit" value="Google search" class="btn btn-primary">
+            <input type="submit" name="btnI" value="I am Feeling Lucky" class="btn btn-primary">
         	</form>
         </div>
         </center>
